--- a/_posts/2020-03-14-Upstream.md
+++ b/_posts/2020-03-14-Upstream.md
@@ -6,8 +6,12 @@ Adding this book to my reading list and will start acting on stopping problems u
 
 
 [1]
-Happier with Gretchen Rubin Episode 263 [1]
-https://gretchenrubin.com/podcast-episode/263-interview-dan-heath
-https://dcs.megaphone.fm/CAD1613853924.mp3?key=3f451819766d963fa6b93d50c793254a - 18:00 - 21:10
+[Happier with Gretchen Rubin Episode 263](https://gretchenrubin.com/podcast-episode/263-interview-dan-heath)
+ 
+[18:00 - 21:10](https://dcs.megaphone.fm/CAD1613853924.mp3?key=3f451819766d963fa6b93d50c793254a)
 
-[2] Upstream - the quest to solve problems before they happen -  https://heathbrothers.com/books/upstream/
+
+[2] 
+[Upstream - the quest to solve problems before they happen](https://heathbrothers.com/books/upstream/)
+
+ 
