2024 year in review updates

--- a/_posts/2025-01-01-2024-Year-In-Review.md
+++ b/_posts/2025-01-01-2024-Year-In-Review.md
@@ -12,21 +12,23 @@ The year kicked off with a trip to Steamboat Colorado for musicfest and ended wi
 
 In between there .... it was pure gold!  
 
-Another thrilling cheifs play off run.  So much fun watching the games with friends and family ![alt text](/assets/img/2024-cheifs-watch.png "2024 Chiefs Watch"); Chiefs parade celebration
-SLC Ski trip to hang with Hailey
-Concerts Concerts Concerts...some of my favorites were Turnpike and the Eagles at the Sphere.  Really cool trip!  Mike Zito with my brother and Bethany
-The first Leapers Keepers event!
-Spring break to Mexico with Friends
-Dallas trip to catch up with friends.  One of them is not doing well now....I am thankful I was able to see him last year.
-Wedding Season!!!  Wedding In CoMo, Spokane and here in KC.  
-Pool parties and Lake trips
-Taco Mile Run w Ethan
-Another year of Steamboat with my buddies.  Such a great trip!  
-Santa Fe again...really cool town!
-Theo Von Show with my brother and Bethany
-Tennis Celebrations!  October fest party....our outfits killed it!
-Road trip with Hailey back from SLC and Thundergong
-Seeing my family for Thanksgiving and Christmas.  Great times
+- Another thrilling cheifs play off run.  So much fun watching the games with friends and family ![alt text](/assets/img/2024-cheifs-watch.png "2024 Chiefs Watch")
+- Chiefs parade celebration
+- SLC Ski trip to hang with Hailey ![alt text](/assets/img/2024-wayne-hailey-ethan-ski.png "2024 Wayne Hailey and Ethan Ski")
+- Concerts Concerts Concerts...some of my favorites were Turnpike and the Eagles at the Sphere.  Really cool trip!  Mike Zito with my brother and Bethany
+- The first Leapers Keepers event!
+- Spring break to Mexico with Friends
+- Dallas trip to catch up with friends.  One of them is not doing well now....I am thankful I was able to see him last year.
+- Wedding Season!!!  Wedding In CoMo, Spokane and here in KC.  
+- Pool parties and Lake trips
+- Taco Mile Run w Ethan  ![alt text](/assets/img/2024-wayne-ethan-taco-mile.png "2024 Taco Mile Run with E")
+- Another year of Steamboat with my buddies.  Such a great trip!  
+- Santa Fe again...really cool town!
+- Theo Von Show with my brother and Bethany
+- Tennis Celebrations!  October fest party....our outfits killed it!
+- A great trip to DC
+- Road trip with Hailey back from SLC and Thundergong
+- Seeing my family for Thanksgiving and Christmas.  Great times!
 
 So many adventures that I didnt put on the list.  It was a very blessed year.  2024 is ![alt text](/assets/img/2024-Wayne-Approved.png "2024 Wayne Approved")
 
