formatting and another version

--- a/_posts/2026-01-01-2025-Year-In-Review.md
+++ b/_posts/2026-01-01-2025-Year-In-Review.md
@@ -1,5 +1,11 @@
 Another year older another year wiser?  2025 was such a great and blessed year.  It was a year that can only be outdone by 2026!
 
+
+
+### 20025 Overall
+
+![2005 Calendar](/assets/img/2025/2025-calendar.png "2005 Calendar")
+
 ### January
 #### Steamboat Music Fest
 The year kicked off with a pretty intense snow storm in Kansas City.  I was scheduled to drive out to Steamboat Co for an annual trip to the Steamboat Music Festival.  And lets just say that for about 150 miles I had I-70 all to myself :)
@@ -9,17 +15,30 @@ Another great music festival out in Steamboat.  One of my favorite artists, Char
 
 #### Passing of a fellow Sigma Nu
 #### Trip to NYC
+Bethany, Drake and I had a great to NYC.  Walked a ton, saw one of the stranger thing actors, good food, exploring and met up with E!  He was in town at the same time.  One of my favorite stories from the trip was when we were planning on meeting E at Grand Central station....We walked in saw him immediately!  Was fun to think about all of the people there and then just seeing him right off the start.  We also had an experience when driving back to the airport in our cab.  "Are you fucking kidding me!"
 
 
-trip to NYC:
-<nyc pics>  favorite story from the trip
+![Brooklyn Bridge Walk](/assets/img/2025/nyc-bridge.png "Brooklyn Bridge Walk")
+
+![NYC Cab Crash](/assets/img/2025/nyc-cab-crash.png "NYC Cab Crash")
+
+
+![Friends](/assets/img/2025/ko-stacy-kingdom.png "Friends")
+
+
+
+
+
+
+
+
+
 
 tennis post wagu wednesdays, ten cap wins;
 broadridge poker
 
 Wades funeral
 birthday parties
-
 shobull sundays
 trivia sub
 watching severence
@@ -33,6 +52,9 @@ theo von
 ### March
 celebrating my dads birthday with booches and pool
 
+![Birthday Lunch w my Dad](/assets/img/2025/dad-bday-lunch.png "Birthday Lunch w my Dad")
+
+
 ### April
 Tater at Knucleheads and also PennyMen
 jason kariaker
@@ -45,6 +67,8 @@ lung force galla; thinking about trev
 
 lucas nelson
 mexico
+
+![Birthday Lunch w my Dad](/assets/img/2025/dad-bday-lunch.png "Birthday Lunch w my Dad")
 
 
 ### June
@@ -77,6 +101,9 @@ clearwater trip
 bethanys bday celebration
 waynesville happy hour
 thanksgiving
+
+![EBT Celebration](/assets/img/2025/celebration-w-ebt.png "EBT Celebration")
+
 
 
 ### December
