--- a/_posts/2026-01-01-2025-Year-In-Review.md
+++ b/_posts/2026-01-01-2025-Year-In-Review.md
@@ -2,9 +2,18 @@ Another year older another year wiser?  2025 was such a great and blessed year. 
 
 
 
-### 20025 Overall
+### 2025 Overall
 
 ![2005 Calendar](/assets/img/2025/2025-calendar.png "2005 Calendar")
+
+
+
+tennis post wagu wednesdays, ten cap wins;
+broadridge poker
+number of fitness days - joe shout out
+number of tennis days
+
+![condo sign](/assets/img/2025/condo-sign.png "Condo Sign")
 
 ### January
 #### Steamboat Music Fest
@@ -25,6 +34,7 @@ Bethany, Drake and I had a great to NYC.  Walked a ton, saw one of the stranger 
 
 ![Friends](/assets/img/2025/ko-stacy-kingdom.png "Friends")
 
+![ko-wayne](/assets/img/2025/ko-wayne.png "ko-wayne")
 
 
 
@@ -32,10 +42,6 @@ Bethany, Drake and I had a great to NYC.  Walked a ton, saw one of the stranger 
 
 
 
-
-
-tennis post wagu wednesdays, ten cap wins;
-broadridge poker
 
 Wades funeral
 birthday parties
@@ -68,7 +74,8 @@ lung force galla; thinking about trev
 lucas nelson
 mexico
 
-![Birthday Lunch w my Dad](/assets/img/2025/dad-bday-lunch.png "Birthday Lunch w my Dad")
+![birthday toast](/assets/img/2025/chad-birthday-toast.png "Birthday Toast")
+
 
 
 ### June
@@ -88,6 +95,9 @@ drive back from slc
 miami trip
 steamboat trip
 
+![Steamboat Fall Trip](/assets/img/2025/wayne-steamboat-fall.png "Steamboat Fall Trip")
+
+
 
 ### October
 adam ray
@@ -99,6 +109,9 @@ halloween party
 ### November
 clearwater trip
 bethanys bday celebration
+
+![Bethany BDay Football Tailgate](/assets/img/2025/bethany-bday-football.png "Bethany BDay Football Tailgate")
+
 waynesville happy hour
 thanksgiving
 
