--- a/_posts/2026-01-01-2025-Year-In-Review.md
+++ b/_posts/2026-01-01-2025-Year-In-Review.md
@@ -31,10 +31,15 @@ Bethany, Drake and I had a great to NYC.  Walked a ton, saw one of the stranger 
 
 ![NYC Cab Crash](/assets/img/2025/nyc-cab-crash.png "NYC Cab Crash")
 
+![E in NYC](/assets/img/2025/e-nyc.png "E in NYC")
+
+
 
 ![Friends](/assets/img/2025/ko-stacy-kingdom.png "Friends")
 
 ![ko-wayne](/assets/img/2025/ko-wayne.png "ko-wayne")
+
+
 
 
 
@@ -65,6 +70,13 @@ celebrating my dads birthday with booches and pool
 Tater at Knucleheads and also PennyMen
 jason kariaker
 kc symphony and 80s dress up
+
+
+![80s symphony](/assets/img/2025/80s-symphony.png "80s Symphony")
+
+
+
+
 brookside art fair
 kearny golf tourney
 
@@ -74,8 +86,15 @@ lung force galla; thinking about trev
 lucas nelson
 mexico
 
+
+![mexico beach](/assets/img/2025/mexico-beach.png "Mexico Beach")
+
+
+
 ![birthday toast](/assets/img/2025/chad-birthday-toast.png "Birthday Toast")
 
+
+![matching shirts](/assets/img/2025/bethany-drake-shirt.png "Matching Shirts")
 
 
 ### June
@@ -84,26 +103,53 @@ legapaloza
 midsummer
 cake in stl
 
+
+![Woodside Midsummer](/assets/img/2025/midsummer.png "Woodside Midsummer")
+
+![Cake Concert](/assets/img/2025/steve-cake.png "Cake Concert")
+
+![SushiBoat](/assets/img/2025/sushi-boat.png "Sushi Boat")
+
+
 ### July
 wright wine tasting
 sigma nu at the lake
+
+
+![SnakesOnTheLake](/assets/img/2025/snakes-lake.png "Snaks on the lake")
+
 shane gillis (when was the theo von show?)
 
 drive back from slc
 
 ### September
 miami trip
+
+![E in Miami](/assets/img/2025/e-miami.png "E in Miami")
+
 steamboat trip
 
 ![Steamboat Fall Trip](/assets/img/2025/wayne-steamboat-fall.png "Steamboat Fall Trip")
 
+![Steamboat Stream](/assets/img/2025/steamboat-stream.png "Steamboat Stream")
 
+
+
+![Wayne KO Chad](/assets/img/2025/wayne-ko-chad.png "Wayne KO Chad")
 
 ### October
 adam ray
 penny men
 charleston
+
+![Charleston Beach](/assets/img/2025/charleston-beach.png "Charleston Beach")
+
+
 halloween party
+
+
+![Halloween](/assets/img/2025/halloween.png "Halloween")
+
 
 
 ### November
@@ -119,41 +165,25 @@ thanksgiving
 
 
 
+![EBT FriendsGiving](/assets/img/2025/ebt-christmas-party.png "EBT FriendsGiving")
+
+
+
+
+
 ### December
 north pole pop up night out
 horns holiday party outing
 calwood trip
 1587 dinner
 
+![1587 Dinner](/assets/img/2025/1587-dinner.png "1587 Dinner")
 
 
-![Halloween Costumes](assets/img/2025/halloween.png "Halloween Costumes")
-![Steamboat Colorado](assets/img/2025/dad-bday-lunch.png "Dad BDay Lunch")
-![Steamboat Colorado](assets/img/2025/mexico-beach.png "")
-![Steamboat Colorado](assets/img/2025/steamboat-stream.png "")
-![Steamboat Colorado](assets/img/2025/nyc-bridge.png "")
-![Steamboat Colorado](assets/img/2025/nyc-cab-crash.png "")
-![Steamboat Colorado](assets/img/2025/snakes-lake.png "")
-![Steamboat Colorado](assets/img/2025/charleston-beach.png "")
-![Steamboat Colorado](assets/img/2025/popup-christmas-bar.mov "")
-![Steamboat Colorado](assets/img/2025/ko-stacy-kingdom.png "")
-![Steamboat Colorado](assets/img/2025/celebration-w-ebt.png "")
-![Steamboat Colorado](assets/img/2025/2025-calendar.png "")
-![Steamboat Colorado](assets/img/2025/wayne-steamboat-fall.png "")
-![Steamboat Colorado](assets/img/2025/ko-wayne.png "")
-![Steamboat Colorado](assets/img/2025/bethany-bday-football.png "")
-![Steamboat Colorado](assets/img/2025/chad-birthday-toast.png "")
-![Steamboat Colorado](assets/img/2025/condo-sign.png "")
-![Steamboat Colorado](assets/img/2025/condo-sunset.png "")
-![Steamboat Colorado](assets/img/2025/1587-dinner.png "")
-![Steamboat Colorado](assets/img/2025/sushi-boat.png "")
-![Steamboat Colorado](assets/img/2025/wayne-ko-chad.png "")
-![Steamboat Colorado](assets/img/2025/steve-cake.png "")
-![Steamboat Colorado](assets/img/2025/midsummer.png "")
-![Steamboat Colorado](assets/img/2025/bethany-drake-shirt.png "")
-![Steamboat Colorado](assets/img/2025/80s-symphony.png "")
-![Steamboat Colorado](assets/img/2025/e-nyc.png "")
-![Steamboat Colorado](assets/img/2025/e-miami.png "")
-![Steamboat Colorado](assets/img/2025/ebt-christmas-party.png "")
 
+
+
+### Random Photo Dump
+
+![condo sunset](/assets/img/2025/condo-sunset.png "condo-sunset.png")
 
